--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -1,1 +1,16 @@
-I
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/myapp/css/index.css">
+</head>
+<body>
+    <div class="container1">
+        <a class="item" href="{% url 'login_view' %}">ログイン</a>
+    </div>
+    <div class="container2">
+        <a class="item" href="{% url 'signup_view' %}">会員登録</a>
+    </div>
+</body>
+</html>
