--- a/myapp/templates/myapp/setting.html
+++ b/myapp/templates/myapp/setting.html
@@ -19,7 +19,7 @@
             <a href="{% url 'username_change' %}">ユーザーネーム変更</a>
         </div>
         <div class="change-mail">
-            <a href="#">メールアドレス変更</a>
+            <a href="{% url 'email_change' %}">メールアドレス変更</a>
         </div>
         <div class="change-thumbnail">
             <a href="#">アイコン変更</a>
