--- a/myapp/templates/myapp/setting.html
+++ b/myapp/templates/myapp/setting.html
@@ -22,10 +22,10 @@
             <a href="{% url 'email_change' %}">メールアドレス変更</a>
         </div>
         <div class="change-thumbnail">
-            <a href="#">アイコン変更</a>
+            <a href="{% url 'thumbnail_change' %}">アイコン変更</a>
         </div>
         <div class="change-passward">
-            <a href="{% url 'thumbnail_change' %}">パスワード変更</a>
+            <a href="#">パスワード変更</a>
         </div>
         <div class="logout">
             <a href="{% url 'logout_view' %}">ログアウト</a>
