--- a/myapp/templates/myapp/setting.html
+++ b/myapp/templates/myapp/setting.html
@@ -25,7 +25,7 @@
             <a href="{% url 'thumbnail_change' %}">アイコン変更</a>
         </div>
         <div class="change-passward">
-            <a href="#">パスワード変更</a>
+            <a href="{% url 'password_change' %}">パスワード変更</a>
         </div>
         <div class="logout">
             <a href="{% url 'logout_view' %}">ログアウト</a>
