--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <div class="container1">
-        <a class="item" href="{% url 'login_view' %}">ログイン</a>
+        <a class="item" href="{% url 'account_login' %}">ログイン</a>
     </div>
     <div class="container2">
-        <a class="item" href="{% url 'signup_view' %}">会員登録</a>
+        <a class="item" href="{% url 'account_signup' %}">会員登録</a>
     </div>
 </body>
 </html>
