--- a/myapp/templates/account/email_confirm.html
+++ b/myapp/templates/account/email_confirm.html
@@ -11,12 +11,10 @@
     <p>ユーザー登録を確定するには以下のボタンを押してください</p>
     <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
         {% csrf_token %}
-        {{ form.as_p }}
-        {% if redirect_field_value %}
-            <input type="hidden" name ="{{redirect_field_name}}" value="{{redirect_field_value}}">
-        {% endif %}
         <button type="submit">確定</button>
-
     </form>
-
+    {% else %}
+        {% url 'account_email' as email_url %}
+        <p>リンクの有効期限が過ぎています<a href="{{email_url}}">再申請</a></p>
+    {% endif %}
 {% endblock %}
