--- a/myapp/templates/myapp/setting.html
+++ b/myapp/templates/myapp/setting.html
@@ -28,7 +28,7 @@
             <a href="{% url 'password_change' %}">パスワード変更</a>
         </div>
         <div class="logout">
-            <a href="{% url 'logout_view' %}">ログアウト</a>
+            <a href="{% url 'account_logout' %}">ログアウト</a>
         </div>
     </div>
     
