--- a/myapp/templates/account/signup.html
+++ b/myapp/templates/account/signup.html
@@ -7,9 +7,9 @@
 
     
 {% block content %}
-    <form method="post" action="{% url 'account_signup' %}">
+    <form method="post" action="{% url 'account_signup' %}" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{form.as_p}}
         {% if redirect_field_value %}
             <input type="hidden" name ="{{redirect_field_name}}" value="{{redirect_field_value}}">
         {% endif %}
